// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemList should not render show more button 1`] = `null`;

exports[`ItemList should render items 1`] = `
@media (max-width:56.25rem) {

}

@media (max-width:600px) {

}

<div>
  test1
</div>
`;

exports[`ItemList should render items 2`] = `
@media (max-width:56.25rem) {

}

@media (max-width:600px) {

}

<div>
  test2
</div>
`;

exports[`ItemList should render search input 1`] = `
@media (max-width:56.25rem) {

}

@media (max-width:600px) {

}

.emotion-2 {
  font-family: PT Mono,monospace;
  height: 36px;
  -webkit-tap-highlight-color: transparent;
  line-height: 34px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  resize: none;
  box-sizing: border-box;
  font-size: 14px;
  width: 100%;
  color: #C1C2C5;
  display: block;
  text-align: left;
  min-height: 36px;
  padding-left: 12px;
  padding-right: 12px;
  border-radius: 4px;
  border: 1px solid #373A40;
  background-color: #25262b;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
}

.emotion-2:disabled {
  background-color: #25262b;
  color: #909296;
  opacity: 0.6;
  cursor: not-allowed;
}

.emotion-2:disabled::-webkit-input-placeholder {
  color: #909296;
}

.emotion-2:disabled::-moz-placeholder {
  color: #909296;
}

.emotion-2:disabled:-ms-input-placeholder {
  color: #909296;
}

.emotion-2:disabled::placeholder {
  color: #909296;
}

.emotion-2::-webkit-input-placeholder {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #5c5f66;
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #5c5f66;
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #5c5f66;
  opacity: 1;
}

.emotion-2::placeholder {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #5c5f66;
  opacity: 1;
}

.emotion-2::-webkit-inner-spin-button,
.emotion-2::-webkit-outer-spin-button,
.emotion-2::-webkit-search-decoration,
.emotion-2::-webkit-search-cancel-button,
.emotion-2::-webkit-search-results-button,
.emotion-2::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.emotion-2[type=number] {
  -moz-appearance: textfield;
}

.emotion-2:focus,
.emotion-2:focus-within {
  outline: none;
  border-color: #1971c2;
}

<input
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2"
  id="mantine-r2"
  placeholder="placeholder-test"
  spellcheck="false"
  type="text"
  value="test1"
/>
`;

exports[`ItemList should render show more button 1`] = `
.c0 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (max-width:56.25rem) {

}

@media (max-width:600px) {

}

.emotion-2 {
  -webkit-tap-highlight-color: transparent;
  font-family: PT Mono,monospace;
  cursor: pointer;
  border: 0;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: 16px;
  background-color: transparent;
  text-align: left;
  color: #C1C2C5;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  height: 36px;
  padding-left: 12px;
  padding-right: 18px;
  font-family: PT Mono,monospace;
  -webkit-tap-highlight-color: transparent;
  display: inline-block;
  width: auto;
  border-radius: 6px;
  font-weight: 600;
  position: relative;
  line-height: 1;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  border: 1px solid #339af0;
  background-color: transparent;
  color: #339af0;
  border-width: 0.125rem;
  letter-spacing: 0.125rem;
  -webkit-transition: 150ms background ease,150ms color ease,150ms border ease;
  transition: 150ms background ease,150ms color ease,150ms border ease;
  background-color: transparent;
  border-color: #838495;
  color: #FFFFFF;
}

.emotion-2:focus {
  outline-offset: 2px;
  outline: 2px solid #1c7ed6;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2:focus {
  outline-offset: 2px;
  outline: 2px solid #1c7ed6;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

@media (hover: hover) {
  .emotion-2:hover {
    background-color: rgba(51, 154, 240, 0.05);
  }
}

@media (hover: none) {
  .emotion-2:active {
    background-color: rgba(51, 154, 240, 0.05);
  }
}

.emotion-2:active {
  -webkit-transform: translateY(1px);
  -moz-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
}

.emotion-2:disabled,
.emotion-2[data-disabled] {
  border-color: transparent;
  background-color: #373A40;
  color: #25262b;
  cursor: not-allowed;
  background-image: none;
  pointer-events: none;
}

.emotion-2:disabled:active,
.emotion-2[data-disabled]:active {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-2[data-loading] {
  pointer-events: none;
}

.emotion-2[data-loading]::before {
  content: "";
  position: absolute;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  background-color: rgba(26, 27, 30, 0.5);
  border-radius: 6px;
  cursor: not-allowed;
}

.emotion-2:disabled {
  background-color: transparent;
  border-color: #838495;
}

.emotion-2:disabled .emotion-9 {
  color: #838495;
}

.emotion-2:active:not(:disabled) {
  border-color: #1761CF;
  color: #1761CF;
}

.emotion-2:hover:not(:disabled) {
  border-color: #5596F6;
  color: #5596F6;
}

.emotion-2[data-loading] .emotion-9 {
  color: #838495;
}

.emotion-2[data-loading]::before {
  content: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 100%;
  overflow: visible;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 10px;
}

.emotion-8 {
  white-space: nowrap;
  height: 100%;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.mantine-1h127la:disabled .emotion-9 {
  color: #838495;
}

.mantine-1h127la[data-loading] .emotion-9 {
  color: #838495;
}

.mantine-19561ee:disabled .emotion-9 {
  color: #838495;
}

.mantine-19561ee[data-loading] .emotion-9 {
  color: #838495;
}

.mantine-ml2k2h:disabled .emotion-9 {
  color: #838495;
}

.mantine-ml2k2h[data-loading] .emotion-9 {
  color: #838495;
}

<button
  class="emotion-0 emotion-1 c0 emotion-2"
  data-button="true"
  type="button"
>
  <div
    class="emotion-3 emotion-4"
  >
    <span
      class="emotion-5 emotion-6 emotion-7"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        />
      </svg>
    </span>
    <span
      class="emotion-8 emotion-9"
      style="text-transform: uppercase;"
    >
      Show more
    </span>
  </div>
</button>
`;

exports[`ItemList should render title 1`] = `
.c0 {
  font-family: VT323;
  font-size: 3rem;
  line-height: 3rem;
}

.c1 {
  font-size: 1.875rem;
  line-height: 2.625rem;
}

@media (max-width:56.25rem) {
  .c0 {
    font-size: 2.5rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.625rem;
    line-height: 2rem;
  }
}

.emotion-1 {
  font-family: PT Mono,monospace;
  -webkit-tap-highlight-color: transparent;
  color: inherit;
  font-size: 0.875rem;
  line-height: 1.55;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  color: #E2E2EE;
  letter-spacing: 0.0125rem;
  line-height: 1.25rem;
  -webkit-transition: 150ms color ease;
  transition: 150ms color ease;
}

.emotion-1:focus {
  outline-offset: 2px;
  outline: 2px solid #1c7ed6;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 c0 c1 emotion-1"
>
  colors
</div>
`;
